Add Design Patterns in JS
Just use Singleton mode in my JS code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="">
-    <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0;" name="viewport" />
+    <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0;" name="viewport"/>
     <title>百度一下，你就知道</title>
     <!-- Place favicon.ico in the root directory -->
     <!-- build:css styles/vendor.css -->
@@ -19,186 +19,199 @@
 </head>
 
 <body>
-    <!--[if lt IE 10]>
-      <!--<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>-->
-    <!--<![endif]&ndash;&gt;-->
-   <nav id="link">
-        <ul class="weatherlink">
-            <li>
-                <div class="weather">
-                    <a href="#" class="onleft">杭州:</a>
-                    <a href="#" class="onleft" id="smweather"><img src="./images/a7.png" id="weather" />15℃<img src="./images/liang.png" id="liang" />57</a>
-                </div>
-                <a href="http://vip.baidu.com/act/xuyuan" class="bao">宝箱</a>
-                <a href="#" class="pifu">换肤</a>
-                <ul class="skin">
-                    <li id="normal">不使用皮肤</li>
-                    <li id="up">收起</li>
-                    <li id="one"><img src="./images/skin1.jpg" class="bigskin" /></li>
-                    <li id="two"><img src="./images/skin2.jpg" class="smskin" /></li>
-                    <li id="three"><img src="./images/skin3.jpg" class="smskin" /></li>
-                    <li id="four"><img src="./images/skin4.jpg" class="smskin" /></li>
-                    <li id="five"><img src="./images/skin5.jpg" class="smskin" /></li>
-                    <li id="six"><img src="./images/skin6.jpg" class="smskin" /></li>
-                    <li id="seven"><img src="./images/skin7.jpg" class="smskin" /></li>
-                    <li id="eight"><img src="./images/skin8.jpg" class="smskin" /></li>
-                    <li id="nine"><img src="./images/skin9.jpg" class="bigskin" /></li>
-                    <li id="ten"><img src="./images/skin10.jpg" class="smskin" /></li>
-                    <li id="eleven"><img src="./images/skin11.jpg" class="smskin" /></li>
-                    <li id="twelve"><img src="./images/skin12.jpg" class="smskin" /></li>
-                </ul>
-                <a href="#" class="message">消息</a>
-                <ul id="childmenu1">
-                    <li id="day">04月24日&nbsp;&nbsp;<span>农历 三月十八</span>&nbsp;&nbsp;<a href="http://music.baidu.com/" class="week">未来七天天气</a>
-                    </li>
-                    <hr style="width: 100%" />
-                    <li>
-                        <div class="fivedays">
-                            <div class="weel"><a href="#" class="weatherli"><span class="daynum">今天(周日)</span><img src="./images/a7.png" class="bigweather"><span class="temp">15℃</span><br/><span class="realwea">小雨转阴</span><span class="wind">东北风3-4级</span></a>
-                            </div>
-                            <div class="weel"><a href="#" class="weatherli"><span class="daynum">明天(周一)</span><img src="./images/a2.png" class="bigweather"><span class="temp">20~15℃</span><br/><span class="realwea">阴转阵雨</span><span class="wind">东风微风</span></a>
-                            </div>
-                            <div class="weel"><a href="#" class="weatherli"><span class="daynum">后天(周二)</span><img src="./images/a7.png" class="bigweather"><span class="temp">23~16℃</span><br/><span class="realwea">阵雨</span><br/><span class="wind">东风微风</span></a>
-                            </div>
-                            <div class="weel"><a href="#" class="weatherli"><span class="daynum">周三</span><img src="./images/a7.png" class="weather"><span class="temp">20~14℃</span><br/><span class="realwea">阵雨转阴</span><br/><span class="wind">西北风微风</span></a>
-                            </div>
-                            <div class="weel"><a href="#" class="weatherli"><span class="daynum">周四</span><img src="./images/a1.png" class="weather"><span class="temp">22~14℃</span><br/><span class="realwea">多云</span><br/><span class="wind">北风微风</span></a>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-       <ul class="moreandmore" id="morelink">
-           <li class="topline">
-               <div class="top"><a href="www.baidu.com/more" class="more">
-                   更多产品
-               </a>
-               </div>
-               <ul id="childmenu">
-                   <li id="music">
-                       <a href="http://music.baidu.com/" class="listyle"><img src="./images/baidumusic.png" class="music" />
-                           <br/>音乐</a>
-                   </li>
-                   <hr/>
-                   <li id="image">
-                       <a href="http://image.baidu.com/" class="listyle"><img src="./images/image.png" class="image" />
-                           <br/>图片</a>
-                   </li>
-                   <hr/>
-                   <li id="zhidao">
-                       <a href="http://zhidao.baidu.com/" class="listyle"><img src="./images/zhidao.png" class="zhidao" />
-                           <br/>知道</a>
-                   </li>
-                   <hr/>
-                   <li id="wenku">
-                       <a href="http://wenku.baidu.com/" class="listyle"><img src="./images/wenku.png" class="wenku" />
-                           <br/>文库</a>
-                   </li>
-                   <hr/>
-                   <li id="bang">
-                       <a href="http://top.baidu.com/" class="listyle"><img src="./images/bang.png" class="bang" />
-                           <br/>风云榜</a>
-                   </li>
-                   <hr/>
-                   <li id="tuiguang">
-                       <a href="http://e.baidu.com/" class="listyle"><img src="./images/tuiguang.png" class="tuiguang" />
-                           <br/>百度推广</a>
-                   </li>
-                   <hr/>
-                   <li id="dip">
-                       <div class="dip"><a href="http://www.baidu.com/more/" class="all">全部产品>></a></div>
-                   </li>
-               </ul>
-           </li>
-       </ul>
-       &nbsp;&nbsp;
-       <div class="normal">
-            <a class="onright" href="http://www.nuomi.com/?cid=002540" id="nuomil">
-            糯米</a> &nbsp;&nbsp;&nbsp;
-            <a class="onright" href="http://news.baidu.com/" id="news">
-            新闻</a> &nbsp;&nbsp;&nbsp;
-            <a class="onright" href="https://www.hao123.com/" id="hao123">
-            hao123</a> &nbsp;&nbsp;&nbsp;
-            <a class="onright" href="http://map.baidu.com/" id="map">
-            地图</a> &nbsp;&nbsp;&nbsp;
-            <a class="onright" href="http://v.baidu.com/" id="vedio">
-            视频</a> &nbsp;&nbsp;&nbsp;
-            <a class="onright" href="http://tieba.baidu.com/" id="tieba">
-            贴吧</a> &nbsp;&nbsp;&nbsp;
-            <a class="onright" href="" id="login">
-            登录</a> &nbsp;&nbsp;&nbsp;
-            <a class="onright" href="" id="setting">
-            设置</a>
-        </div>
-    </nav>
-    <hr class="downnav" />
-    <article>
-        <div id="baidu">
-            <img class="pic" src="./images/baidu.png" style="width: 250px; height: 75px; margin-left: -125px; margin-top: 70px;">
-        </div>
-        <div class="allcenter">
-            <div class="juzhong">
-                <form action="tijiao.php" method="post">
-                    <div class="sskuang">
-                        <input id="sousuo" name="sousuo" type="text" />
-                        <a calss="other" href="#" id="microphone">
-                        </a>
-                        <a href="#" id="camera">
-                        </a>
-                        <input class="so" type="submit" value="百度一下" />
-                    </div>
-                </form>
+<!--[if lt IE 10]>
+  <!--<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>-->
+<!--<![endif]&ndash;&gt;-->
+<nav id="link">
+    <ul class="weatherlink">
+        <li>
+            <div class="weather">
+                <a href="#" class="onleft">杭州:</a>
+                <a href="#" class="onleft" id="smweather"><img src="./images/a7.png" id="weather"/>15℃<img
+                        src="./images/liang.png" id="liang"/>57</a>
             </div>
-        </div>
-        <!-- 输入框和搜索按钮 -->
-        <div class="box">
-            <ul class="tab">
-                <li class="first tabin"><img src="./images/usertab.jpg" class="user" /><span class="myfocus">我的关注</span>
-                </li>
-                <li>导航</li>
-                <li>新闻</li>
-                <li>视频</li>
-                <li>购物</li>
+            <a href="http://vip.baidu.com/act/xuyuan" class="bao">宝箱</a>
+            <a href="#" class="pifu">换肤</a>
+            <ul class="skin">
+                <li id="normal">不使用皮肤</li>
+                <li id="up">收起</li>
+                <li id="skin1"><img src="./images/skin1.jpg" class="bigskin"/></li>
+                <li id="skin2"><img src="./images/skin2.jpg" class="smskin"/></li>
+                <li id="skin3"><img src="./images/skin3.jpg" class="smskin"/></li>
+                <li id="skin4"><img src="./images/skin4.jpg" class="smskin"/></li>
+                <li id="skin5"><img src="./images/skin5.jpg" class="smskin"/></li>
+                <li id="skin6"><img src="./images/skin6.jpg" class="smskin"/></li>
+                <li id="skin7"><img src="./images/skin7.jpg" class="smskin"/></li>
+                <li id="skin8"><img src="./images/skin8.jpg" class="smskin"/></li>
+                <li id="skin9"><img src="./images/skin9.jpg" class="bigskin"/></li>
+                <li id="skin10"><img src="./images/skin10.jpg" class="smskin"/></li>
+                <li id="skin11"><img src="./images/skin11.jpg" class="smskin"/></li>
+                <li id="skin12"><img src="./images/skin12.jpg" class="smskin"/></li>
             </ul>
-            <div class="setting"></div>
-            <hr class="tabhr" />
-            <div class="content">
-                <div class="realcontent">
+            <a href="#" class="message">消息</a>
+            <ul id="childmenu1">
+                <li id="day">04月24日&nbsp;&nbsp;<span>农历 三月十八</span>&nbsp;&nbsp;<a href="http://music.baidu.com/"
+                                                                                  class="week">未来七天天气</a>
+                </li>
+                <hr style="width: 100%"/>
+                <li>
+                    <div class="fivedays">
+                        <div class="weel"><a href="#" class="weatherli"><span class="daynum">今天(周日)</span><img
+                                src="./images/a7.png" class="bigweather"><span class="temp">15℃</span><br/><span
+                                class="realwea">小雨转阴</span><span class="wind">东北风3-4级</span></a>
+                        </div>
+                        <div class="weel"><a href="#" class="weatherli"><span class="daynum">明天(周一)</span><img
+                                src="./images/a2.png" class="bigweather"><span class="temp">20~15℃</span><br/><span
+                                class="realwea">阴转阵雨</span><span class="wind">东风微风</span></a>
+                        </div>
+                        <div class="weel"><a href="#" class="weatherli"><span class="daynum">后天(周二)</span><img
+                                src="./images/a7.png" class="bigweather"><span class="temp">23~16℃</span><br/><span
+                                class="realwea">阵雨</span><br/><span class="wind">东风微风</span></a>
+                        </div>
+                        <div class="weel"><a href="#" class="weatherli"><span class="daynum">周三</span><img
+                                src="./images/a7.png" class="weather"><span class="temp">20~14℃</span><br/><span
+                                class="realwea">阵雨转阴</span><br/><span class="wind">西北风微风</span></a>
+                        </div>
+                        <div class="weel"><a href="#" class="weatherli"><span class="daynum">周四</span><img
+                                src="./images/a1.png" class="weather"><span class="temp">22~14℃</span><br/><span
+                                class="realwea">多云</span><br/><span class="wind">北风微风</span></a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </li>
+    </ul>
+    <ul class="moreandmore" id="morelink">
+        <li class="topline">
+            <div class="top"><a href="www.baidu.com/more" class="more">
+                更多产品
+            </a>
+            </div>
+            <ul id="childmenu">
+                <li id="music">
+                    <a href="http://music.baidu.com/" class="listyle"><img src="./images/baidumusic.png" class="music"/>
+                        <br/>音乐</a>
+                </li>
+                <hr/>
+                <li id="image">
+                    <a href="http://image.baidu.com/" class="listyle"><img src="./images/image.png" class="image"/>
+                        <br/>图片</a>
+                </li>
+                <hr/>
+                <li id="zhidao">
+                    <a href="http://zhidao.baidu.com/" class="listyle"><img src="./images/zhidao.png" class="zhidao"/>
+                        <br/>知道</a>
+                </li>
+                <hr/>
+                <li id="wenku">
+                    <a href="http://wenku.baidu.com/" class="listyle"><img src="./images/wenku.png" class="wenku"/>
+                        <br/>文库</a>
+                </li>
+                <hr/>
+                <li id="bang">
+                    <a href="http://top.baidu.com/" class="listyle"><img src="./images/bang.png" class="bang"/>
+                        <br/>风云榜</a>
+                </li>
+                <hr/>
+                <li id="tuiguang">
+                    <a href="http://e.baidu.com/" class="listyle"><img src="./images/tuiguang.png" class="tuiguang"/>
+                        <br/>百度推广</a>
+                </li>
+                <hr/>
+                <li id="dip">
+                    <div class="dip"><a href="http://www.baidu.com/more/" class="all">全部产品>></a></div>
+                </li>
+            </ul>
+        </li>
+    </ul>
+    &nbsp;&nbsp;
+    <div class="normal">
+        <a class="onright" href="http://www.nuomi.com/?cid=002540" id="nuomil">
+            糯米</a> &nbsp;&nbsp;&nbsp;
+        <a class="onright" href="http://news.baidu.com/" id="news">
+            新闻</a> &nbsp;&nbsp;&nbsp;
+        <a class="onright" href="https://www.hao123.com/" id="hao123">
+            hao123</a> &nbsp;&nbsp;&nbsp;
+        <a class="onright" href="http://map.baidu.com/" id="map">
+            地图</a> &nbsp;&nbsp;&nbsp;
+        <a class="onright" href="http://v.baidu.com/" id="vedio">
+            视频</a> &nbsp;&nbsp;&nbsp;
+        <a class="onright" href="http://tieba.baidu.com/" id="tieba">
+            贴吧</a> &nbsp;&nbsp;&nbsp;
+        <a class="onright" href="" id="login">
+            登录</a> &nbsp;&nbsp;&nbsp;
+        <a class="onright" href="" id="setting">
+            设置</a>
+    </div>
+</nav>
+<hr class="downnav"/>
+<article>
+    <div id="baidu">
+        <img class="pic" src="./images/baidu.png"
+             style="width: 250px; height: 75px; margin-left: -125px; margin-top: 70px;">
+    </div>
+    <div class="allcenter">
+        <div class="juzhong">
+            <form action="tijiao.php" method="post">
+                <div class="sskuang">
+                    <input id="sousuo" name="sousuo" type="text"/>
+                    <a calss="other" href="#" id="microphone">
+                    </a>
+                    <a href="#" id="camera">
+                    </a>
+                    <input class="so" type="submit" value="百度一下"/>
                 </div>
+            </form>
+        </div>
+    </div>
+    <!-- 输入框和搜索按钮 -->
+    <div class="box">
+        <ul class="tab">
+            <li class="first tabin"><img src="./images/usertab.jpg" class="user"/><span class="myfocus">我的关注</span>
+            </li>
+            <li>导航</li>
+            <li>新闻</li>
+            <li>视频</li>
+            <li>购物</li>
+        </ul>
+        <div class="setting"></div>
+        <hr class="tabhr"/>
+        <div class="content">
+            <div class="realcontent">
             </div>
         </div>
-    </article>
-    <!-- 底部 -->
-    <footer class="dibu">
-        <div class="abbaidu">
-            <a class="down" href="https://www.baidu.com/cache/sethelp/help.html">
+    </div>
+</article>
+<!-- 底部 -->
+<footer class="dibu">
+    <div class="abbaidu">
+        <a class="down" href="https://www.baidu.com/cache/sethelp/help.html">
             设为首页</a> &nbsp;&nbsp;
             <span class="copy">
                             ©2016 Baidu
                         </span>
-            <a class="down" href="http://www.baidu.com/duty/">
+        <a class="down" href="http://www.baidu.com/duty/">
             使用百度前必读
         </a>
-            <a class="down" href="http://jianyi.baidu.com/" id="down">
+        <a class="down" href="http://jianyi.baidu.com/" id="down">
             意见反馈
         </a>
             <span class="jing">
                             京ICP证030173号
                         </span>
-            <img class="biaozhi1" src="./images/biaozhi1.png" />
-            <br/>
+        <img class="biaozhi1" src="./images/biaozhi1.png"/>
+        <br/>
             <span class="wangan">
                             <img src="./images/biaozhi2.png"/>
                             京公网安备11000002000001号
                         </span>
-        </div>
-    </footer>
     </div>
+</footer>
+</div>
 
-    <script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
 
-    <script type="text/javascript" src="scripts/js/baidu.js"></script>
+<script type="text/javascript" src="scripts/js/baidu.js"></script>
 
 </body>
 
