--- a/myfa.html
+++ b/myfa.html
@@ -2,179 +2,183 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-	<title>我的关注</title>
-	<link rel="stylesheet" type="text/css" href="styles/myfa.css"/>
+    <title>我的关注</title>
+    <link rel="stylesheet" type="text/css" href="styles/myfa.css"/>
 </head>
 <body>
-        <img src="images/arrdown.jpg" class="arr"/>
-          <h2>我的导航</h2>
-          <hr/>
-         <table class="ontop">
-                    <tr>
-                       <td>
-                       	综合
-                       </td>
-                        <td>
-                            <div class="baiduicon">
-                            </div>
-                            <a class="alllink" href="https://www.baidu.com">
-                                百度
-                            </a>
-                        </td>
-                        <td>
-                            <div class="sohuicon">
-                            </div>
-                            <a class="alllink" href="http://www.sohu.com/">
-                                搜狐
-                            </a>
-                        </td>
-                        <td>
-                            <div class="qqicon">
-                            </div>
-                            <a class="alllink" href="http://www.qq.com/">
-                                腾讯
-                            </a>
-                        </td>
-                        <td>
-                            <div class="wangyiicon">
-                            </div>
-                            <a class="alllink" href="http://www.163.com/">
-                                网易
-                            </a>
-                        </td>
-                    </tr>
-                    <hr class="one"/>
-                    <tr>
-                        <td>社区</td>
-                    	<td>
-                            <div class="sinaicon">
-                            </div>
-                            <a class="alllink" href="http://weibo.com/">
-                                新浪微博
-                            </a>
-                        </td>
-                    </tr>
-                    <hr class="two"/>
-                    <tr>
-                        <td>购物</td>
-                        <td>
-                            <div class="tmallicon">
-                            </div>
-                            <a class="alllink" href="https://www.tmall.com/?ali_trackid=2:mm_26632322_6858406_23810104:1460629212_254_1862656906">
-                                天猫
-                            </a>
-                        </td>
-                        <td>
-                            <div class="taobaoicon">
-                            </div>
-                            <a class="alllink" href="https://www.taobao.com/">
-                                淘宝网
-                            </a>
-                        </td>
-                        <td>
-                            <div class="jdicon">
-                            </div>
-                            <a class="alllink" href="https://www.jd.com/?cu=true&utm_source=www.hao123.com&utm_medium=tuiguang&utm_campaign=t_1000003625_hao123mz&utm_term=16993dcc02a346789bd00acece1d330d">
-                                京东商城
-                            </a>
-                        </td>
-                        <td>
-                            <div class="jhsicon">
-                            </div>
-                            <a class="alllink" href="https://ju.taobao.com/?ali_trackid=2:mm_43125636_4246598_25832396:1460629799_2k3_1834734644">
-                                聚划算
-                            </a>
-                        </td>
-                        <td>
-                            <div class="jrtjicon">
-                            </div>
-                            <a class="alllink" href="http://tejia.hao123.com/?tn=mz">
-                                今日特价
-                            </a>
-                        </td>
-                        </tr>
-                         <hr class="three"/>
-                        <tr>
-                        <td>游戏</td>
-                        <td>
-                            <div class="gameicon">
-                            </div>
-                            <a class="alllink" href="https://game.hao123.com/">
-                                免费游戏
-                            </a>
-                        </td>
-                        <td>
-                            <div class="g4399icon">
-                            </div>
-                            <a class="alllink" href="http://www.4399.com/">
-                                4399游戏
-                            </a>
-                        </td>
-                        </tr>
-                         <hr class="four"/>
-                        <tr>
-                        <td>
-                          阅读
-                        </td>
-                        <td>
-                            <div class="xinhuaicon">
-                            </div>
-                            <a class="alllink" href="http://www.xinhuanet.com/">
-                                新华
-                            </a>
-                            ·
-                            <a class="alllink" href="http://www.people.com.cn/">
-                                人民
-                            </a>
-                        </td>
-                        <td>
-                            <div class="ifengicon">
-                            </div>
-                            <a class="alllink" href="http://www.ifeng.com/">
-                                凤凰网
-                            </a>
-                        </td>
-                    </tr>
-                     <hr class="five"/>
-                    <tr>
-                       <td>影视</td>
-                         <td>
-                            <div class="youkuicon">
-                            </div>
-                            <a class="alllink" href="http://www.youku.com/">
-                                优酷网
-                            </a>
-                        </td>
-                        <td>
-                            <div class="hmovieicon">
-                            </div>
-                            <a class="alllink" href="http://v.hao123.com/">
-                                hao123影视
-                            </a>
-                        </td>
-                        </tr>
-                        <hr class="six"/>
-                        <tr>
-                        <td>未分类</td>
-                        <td>
-                            <div class="caricon">
-                            </div>
-                            <a class="alllink" href="http://www.autohome.com.cn/beijing/">
-                                汽车之家
-                            </a>
-                        </td>
-                        <td>
-                            <div class="moneyicon">
-                            </div>
-                            <a class="alllink" href="http://caipiao.hao123.com/">
-                                彩票开奖
-                            </a>
-                        </td>
-                    </tr>
-                     <hr class="seven"/>
-                </table>
-                 <a href="#" class="alllink"><img src="images/zidingyi.png" class="zidingyi"/><span class="ziyangshi">自定义</span></a>
-                 <script src="scripts/jquery-2.1.4.min.js"></script>
-                 <script type="text/javascript" src="scripts/js/newbaidu.js"></script>
+<img src="images/arrdown.jpg" class="arr"/>
+
+<h2>我的导航</h2>
+<hr/>
+<table class="ontop">
+    <tr>
+        <td>
+            综合
+        </td>
+        <td>
+            <div class="baiduicon">
+            </div>
+            <a class="alllink" href="https://www.baidu.com">
+                百度
+            </a>
+        </td>
+        <td>
+            <div class="sohuicon">
+            </div>
+            <a class="alllink" href="http://www.sohu.com/">
+                搜狐
+            </a>
+        </td>
+        <td>
+            <div class="qqicon">
+            </div>
+            <a class="alllink" href="http://www.qq.com/">
+                腾讯
+            </a>
+        </td>
+        <td>
+            <div class="wangyiicon">
+            </div>
+            <a class="alllink" href="http://www.163.com/">
+                网易
+            </a>
+        </td>
+    </tr>
+    <hr class="one"/>
+    <tr>
+        <td>社区</td>
+        <td>
+            <div class="sinaicon">
+            </div>
+            <a class="alllink" href="http://weibo.com/">
+                新浪微博
+            </a>
+        </td>
+    </tr>
+    <hr class="two"/>
+    <tr>
+        <td>购物</td>
+        <td>
+            <div class="tmallicon">
+            </div>
+            <a class="alllink"
+               href="https://www.tmall.com/?ali_trackid=2:mm_26632322_6858406_23810104:1460629212_254_1862656906">
+                天猫
+            </a>
+        </td>
+        <td>
+            <div class="taobaoicon">
+            </div>
+            <a class="alllink" href="https://www.taobao.com/">
+                淘宝网
+            </a>
+        </td>
+        <td>
+            <div class="jdicon">
+            </div>
+            <a class="alllink"
+               href="https://www.jd.com/?cu=true&utm_source=www.hao123.com&utm_medium=tuiguang&utm_campaign=t_1000003625_hao123mz&utm_term=16993dcc02a346789bd00acece1d330d">
+                京东商城
+            </a>
+        </td>
+        <td>
+            <div class="jhsicon">
+            </div>
+            <a class="alllink"
+               href="https://ju.taobao.com/?ali_trackid=2:mm_43125636_4246598_25832396:1460629799_2k3_1834734644">
+                聚划算
+            </a>
+        </td>
+        <td>
+            <div class="jrtjicon">
+            </div>
+            <a class="alllink" href="http://tejia.hao123.com/?tn=mz">
+                今日特价
+            </a>
+        </td>
+    </tr>
+    <hr class="three"/>
+    <tr>
+        <td>游戏</td>
+        <td>
+            <div class="gameicon">
+            </div>
+            <a class="alllink" href="https://game.hao123.com/">
+                免费游戏
+            </a>
+        </td>
+        <td>
+            <div class="g4399icon">
+            </div>
+            <a class="alllink" href="http://www.4399.com/">
+                4399游戏
+            </a>
+        </td>
+    </tr>
+    <hr class="four"/>
+    <tr>
+        <td>
+            阅读
+        </td>
+        <td>
+            <div class="xinhuaicon">
+            </div>
+            <a class="alllink" href="http://www.xinhuanet.com/">
+                新华
+            </a>
+            ·
+            <a class="alllink" href="http://www.people.com.cn/">
+                人民
+            </a>
+        </td>
+        <td>
+            <div class="ifengicon">
+            </div>
+            <a class="alllink" href="http://www.ifeng.com/">
+                凤凰网
+            </a>
+        </td>
+    </tr>
+    <hr class="five"/>
+    <tr>
+        <td>影视</td>
+        <td>
+            <div class="youkuicon">
+            </div>
+            <a class="alllink" href="http://www.youku.com/">
+                优酷网
+            </a>
+        </td>
+        <td>
+            <div class="hmovieicon">
+            </div>
+            <a class="alllink" href="http://v.hao123.com/">
+                hao123影视
+            </a>
+        </td>
+    </tr>
+    <hr class="six"/>
+    <tr>
+        <td>未分类</td>
+        <td>
+            <div class="caricon">
+            </div>
+            <a class="alllink" href="http://www.autohome.com.cn/beijing/">
+                汽车之家
+            </a>
+        </td>
+        <td>
+            <div class="moneyicon">
+            </div>
+            <a class="alllink" href="http://caipiao.hao123.com/">
+                彩票开奖
+            </a>
+        </td>
+    </tr>
+    <hr class="seven"/>
+</table>
+<a href="#" class="alllink"><img src="images/zidingyi.png" class="zidingyi"/><span class="ziyangshi">自定义</span></a>
+<script src="scripts/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="scripts/js/newbaidu.js"></script>
 </body>
 </html>
